services: Fix status wrapping and optimize layout

--- a/pkg/systemd/services/services.scss
+++ b/pkg/systemd/services/services.scss
@@ -10,12 +10,6 @@
     border-bottom: 1px solid var(--pf-global--BorderColor--100);
 }
 
-// Magic pixie dust to make the list a bit faster and more furious
-.services-list tbody {
-    // Skip a lot of computations
-    contain: content;
-}
-
 .service-unit-failed {
     background-color: var(--ct-color-list-critical-bg);
 
@@ -30,7 +24,6 @@
 
     &-failed {
         color: red;
-        white-space: break-spaces;
     }
 
     &-flex-container {
@@ -94,4 +87,46 @@
 }
 .pf-m-grid-md.pf-c-table [data-label] {
     display: revert;
+}
+
+// Magic pixie dust to make the list a bit faster and more furious
+.services-list {
+    // Prevent reflows; only applies to desktop (mobile changes display)
+    // table-layout: fixed;
+
+    tr {
+        // Skip a lot of computations
+        contain: content;
+        // Only render what's needed
+        // content-visibility: auto;
+    }
+}
+
+// Optimize layout, mainly using block, so we don't nest multiple levels of
+// grids and flex on thousands of elements.
+.services-list {
+    @media screen and (max-width: $pf-global--breakpoint--md) {
+        display: block !important;
+
+        tbody {
+            display: block !important;
+        }
+
+        th, td {
+            // display: grid;
+            display: block !important;
+        }
+    }
+
+    @media screen and (max-width: $pf-global--breakpoint--sm) {
+        td {
+            > .service-unit-status-flex-container {
+                // display: grid !important;
+                display: flex !important;
+                flex-direction: column-reverse;
+                align-items: end;
+                gap: var(--pf-global--spacer--sm);
+            }
+        }
+    }
 }
